# oops

./: .editorconfig  .gitignore  .oops.example.yaml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .ruff.toml  404.html  AGENT.md  CHANGELOG.md  CLAUDE.md  Makefile  README.md  RELEASE_NOTES.md  ROADMAP.md  fixit.toml  index.html  install.sh  mkdocs.yml  pyproject.toml  versions.json
.devcontainer/: devcontainer.json
.github/workflows/: ci.yaml  docs.yaml
0.10.0/: index.html  objects.inv
0.10.0/search/: search_index.json
0.11.0/changelog/: index.html
0.11.0/search/: search_index.json
0.11.0/use-case/: index.html
0.12.0/release-notes/: index.html
0.12.0/search/: search_index.json
0.12.1/changelog/: index.html
0.12.1/release-notes/: index.html
0.12.1/search/: search_index.json
0.12.2/: index.html  objects.inv
0.12.2/release-notes/: index.html
0.12.2/search/: search_index.json
0.12.3/: index.html
0.12.3/changelog/: index.html
0.12.3/config/: index.html
0.12.3/search/: search_index.json
0.13.0/: 404.html  index.html
0.13.0/changelog/: index.html
0.13.0/contributing/: index.html
0.13.0/hooks/: index.html
0.13.0/release-notes/: index.html
0.13.0/search/: search_index.json
0.14.0/: objects.inv
0.14.0/contributing/: index.html
0.14.0/search/: search_index.json
0.15.0/: index.html
0.15.0/search/: search_index.json
0.15.1/: 404.html  index.html
0.15.1/search/: search_index.json
0.16.0/: index.html
0.16.0/search/: search_index.json
0.17.0/: hooks.py  index.html  objects.inv
0.17.0/search/: search_index.json
0.18.0/: index.html  objects.inv
0.18.0/search/: search_index.json
0.19.0/: index.html  objects.inv
0.19.0/search/: search_index.json
0.19.3/: 404.html
0.19.3/search/: search_index.json
0.2.0/: 404.html  objects.inv
0.2.0/config/: index.html
0.2.0/hooks/: index.html
0.2.0/search/: search_index.json
0.20.0/: 404.html  index.html  objects.inv
0.20.0/search/: search_index.json
0.3.0/: index.html
0.3.0/search/: search_index.json
0.3.1/: index.html
0.3.1/config/: index.html
0.3.1/hooks/: index.html
0.3.1/search/: search_index.json
0.3.1/use-case/: index.html
0.4.0/: index.html
0.4.0/config/: index.html
0.4.0/hooks/: index.html
0.4.0/search/: search_index.json
0.4.0/stylesheets/: extra.css
0.4.0/use-case/: index.html
0.6.1/: index.html  objects.inv
0.6.1/search/: search_index.json
0.6.2/: index.html
0.6.2/contributing/: index.html
0.6.2/rules/: index.html
0.6.2/search/: search_index.json
0.7.0/config/: index.html
0.7.0/hooks/: index.html
0.7.0/search/: search_index.json
0.7.0/use-case/: index.html
0.8.0/: index.html  objects.inv
0.8.0/search/: search_index.json
0.9.0/: index.html  objects.inv
0.9.0/contributing/: index.html
0.9.0/search/: search_index.json
commands/addons/: index.html
commands/project/: index.html
commands/readme/: index.html
commands/release/: index.html
commands/submodules/: index.html
config/: index.html
contributing/: index.html
dev/: 404.html  index.html  objects.inv
dev/changelog/: index.html
dev/config/: index.html
dev/contributing/: index.html
dev/hooks/: index.html
dev/release-notes/: index.html
dev/rules/: index.html
dev/search/: search_index.json
dev/use-case/: index.html
docs/: config.md  contributing.md  hooks.md  index.md  rules.md  use-case.md  use_case.md
docs/commands/: addons.md  manifest.md  misc.md  odoo.md  project.md  readme.md  release.md  requirements.md  submodules.md
docs/guide/: config.md  quickstart.md  rules.md
docs/reference/: method-classification.md
docs/stylesheets/: extra.css
hooks/: index.html
oops/: __main__.py  cli.py  compat.py  docker.py  exceptions.py  github.py  gitutils.py  helpers.py  io.py  models.py  net.py  parser.py  render.py  tools.py
oops/addons/: __init__.py  add.py  diff.py  download.py  gen_table.py  list.py  materialize.py
oops/commands/: base.py
oops/core/: config.py  exceptions.py  messages.py  models.py  paths.py
oops/git/: __init__.py  config.py  core.py  gitutils.py  gitutils.py.bak  repository.py  submodules.py  utils.py  versioning.py
oops/io/: file.py  manifest.py  tools.py
oops/manifest/: __init__.py  check.py  fix.py
oops/project/: __init__.py  check.py  common.py  exclusions.py  info.py  update.py
oops/rules/: _helpers.py  examples.py  manifest.py
oops/services/: docker.py  git.py  github.py
oops/submodules/: __init__.py  add.py  check.py  clean.py  prune.py  rename.py  rewrite.py  show.py  update.py
oops/utils/: git.py  helpers.py  io.py  net.py  render.py  tools.py
osh/: docker.py  gitutils.py  helpers.py  io.py  messages.py  models.py  net.py  render.py  tools.py  utils.py
osh/addons/: add.py  diff.py  download.py  list.py  materialize.py
osh/manifest/: check.py  fix.py
osh/project/: check.py  common.py  exclusions.py  info.py  update.py
osh/rules/: manifest.py
osh/submodules/: __init__.py  add.py  check.py  clean.py  prune.py  rename.py  rewrite.py  show.py  update.py
search/: search_index.json
src/oops/: __main__.py  cli.py
tests/: .test_rename.py  conftest.py  test_analyze.py  test_cli_smoke.py  test_commands_addons_list.py  test_config.py  test_convert.py  test_core_and_utils.py  test_coverage_gaps.py  test_descriptors.py  test_domain_profile.py  test_io_extended.py  test_io_format.py  test_io_installed_modules.py  test_kb_build.py  test_kb_identity.py  test_kb_provenance.py  test_kb_resolve.py  test_kb_scanner.py  test_kb_store.py  test_kb_xml_scanner.py  test_misc_commands.py  test_odoo.py  test_odoo_commands.py  test_project_doc.py  test_project_init.py  test_project_serve.py  test_python_imports.py  test_refactor.py  test_requirements_diff.py  test_result.py  test_rules_helpers.py  test_rules_manifest.py  test_scanner_content.py  test_services_docker.py  test_services_loc.py  test_services_project.py  test_sub_add.py  test_sub_check.py  test_sub_clean.py  (+4 more)
ui/: build.mjs  package-lock.json  package.json  tsconfig.json
use-case/: index.html
use_case/: index.html
(+558 files in other folders)
