[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "oops"
description = "Set of tools to help managing Odoo addons development"
readme = "README.md"
license = "AGPL-3.0-only"
authors = [{name = "Apik"}]
keywords = ["odoo", "git", "submodules", "manifests", "cli"]
dynamic = ["version"]
dependencies = [
    "appdirs",
    "docutils",
    "freezegun",
    "PyYAML",
    "requests",
    "twine",
    "wheel",
    "pyproject_dependencies ; python_version>='3.7'",
    "typing-extensions; python_version<'3.11'",
    "importlib-metadata; python_version<'3.10'",
    "tomli; python_version<'3.11'", # from 3.11 tomllib is in stdlib
    "backports.zoneinfo; python_version<'3.9'",
    "click>=8.1",
    "typing-extensions>=4.7; python_version<'3.8'",
    "libcst==0.4.*; python_version<'3.8'",
    "rich>=13.0",
    "fixit>2.0",
    "black",
    "tabulate",
    "GitPython",
]


requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
]

[project.urls]
homepage = "https://github.com/apikcloud/oops"
repository = "https://github.com/apikcloud/oops"

[project.scripts]
# Sub-commands
oops-addons-add = "oops.commands.addons.add:main"
oops-addons-diff = "oops.commands.addons.diff:main"
oops-addons-download = "oops.commands.addons.download:main"
oops-addons-list = "oops.commands.addons.list:main"
oops-addons-materialize = "oops.commands.addons.materialize:main"
oops-addons-table = "oops.commands.addons.gen_table:main"
oops-i-did-it-again = "oops.commands.submodules.clean:main"
oops-man-check = "oops.commands.manifest.check:main"
oops-man-fix = "oops.commands.manifest.fix:main"
oops-pro-check = "oops.commands.project.check:main"
oops-pro-exclude = "oops.commands.project.exclusions:main"
oops-pro-info = "oops.commands.project.info:main"
oops-pro-update = "oops.commands.project.update:main"
oops-sub-add = "oops.commands.submodules.add:main"
oops-sub-branch = "oops.commands.submodules.branch:main"
oops-sub-check = "oops.commands.submodules.check:main"
oops-sub-clean = "oops.commands.submodules.clean:main"
oops-sub-fix = "oops.commands.submodules.fix:main"
oops-sub-flatten = "oops.commands.submodules:flatten"
oops-sub-prune = "oops.commands.submodules.prune:main"
oops-sub-rename = "oops.commands.submodules.rename:main"
oops-sub-replace = "oops.commands.submodules.replace:main"
oops-sub-rewrite = "oops.commands.submodules.rewrite:main"
oops-sub-show = "oops.commands.submodules.show:main"
oops-sub-update = "oops.commands.submodules.update:main"

[tool.hatch.build.targets.wheel]
packages = ["oops"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
source = "vcs"

[tool.ruff]
line-length = 100
target-version = "py37"
lint.select = ["E","F","I","B","UP","SIM","PL","C90"]
lint.ignore = [
  "E203", # whitespace before ':' (plays better with Black if you add it later)
]
exclude = ["tests/fixtures"]

[tool.pyright]
typeCheckingMode = "basic"
pythonVersion = "3.7"
reportMissingTypeStubs = false

[tool.pytest.ini_options]
addopts = "-q --strict-markers"
testpaths = ["tests"]

[tool.coverage.run]
source = ["oops"]
branch = true
parallel = true
omit = [
  "*/__main__.py",
  "*/_version.py",
  "*/tests/*",
]

[tool.coverage.report]
skip_empty = true
show_missing = true
fail_under = 80
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
  "raise NotImplementedError",
]

[tool.coverage.paths]
source = [
  "oops",
  ".venv/lib/python*/site-packages/oops",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "coverage[toml]",
]
