[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "oops"
description = "Our Odoo Project Sidekick"
readme = "README.md"
license = "AGPL-3.0-only"
authors = [{ name = "Apik" }]
keywords = ["odoo", "git", "submodules", "manifests", "cli"]
dynamic = ["version"]
dependencies = [
    "PyYAML",
    "requests",
    "typing-extensions; python_version<'3.11'",
    "importlib-metadata; python_version<'3.10'",
    "tomli; python_version<'3.11'",                 # from 3.11 tomllib is in stdlib
    "backports.zoneinfo; python_version<'3.9'",
    "click>=8.1",
    "typing-extensions>=4.7; python_version<'3.8'",
    "libcst==0.4.*; python_version<'3.8'",
    "libcst; python_version>='3.8'",
    "rich>=13.0",
    "fixit>2.0; python_version>='3.9'",
    "tabulate",
    "GitPython",
]


requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
]

[project.urls]
homepage = "https://github.com/apikcloud/oops"
repository = "https://github.com/apikcloud/oops"

[project.scripts]
# Root command
oops = "oops.cli:main"
# Sub-commands
oops-addons-add = "oops.commands.addons.add:main"
oops-addons-compare = "oops.commands.addons.compare:main"
oops-addons-diff = "oops.commands.addons.diff:main"
oops-addons-download = "oops.commands.addons.download:main"
oops-addons-list = "oops.commands.addons.list:main"
oops-addons-materialize = "oops.commands.addons.materialize:main"
oops-i-did-it-again = "oops.commands.submodules.clean:main"
oops-man-check = "oops.commands.manifest.check:main"
oops-man-fix = "oops.commands.manifest.fix:main"
oops-misc-create-workspace = "oops.commands.misc.create_workspace:main"
oops-misc-edit-config = "oops.commands.misc.edit_config:main"
oops-misc-view-doc = "oops.commands.misc.view_doc:main"
oops-odoo-download = "oops.commands.odoo.download:main"
oops-odoo-show = "oops.commands.odoo.show:main"
oops-odoo-update = "oops.commands.odoo.update:main"
oops-pro-check = "oops.commands.project.check:main"
oops-pro-exclude = "oops.commands.project.exclude:main"
oops-pro-init = "oops.commands.project.init:main"
oops-pro-show = "oops.commands.project.show:main"
oops-pro-sync = "oops.commands.project.sync:main"
oops-pro-update = "oops.commands.project.update:main"
oops-readme-update = "oops.commands.readme.update:main"
oops-release-create = "oops.commands.release.create:main"
oops-release-show = "oops.commands.release.show:main"
oops-req-check = "oops.commands.requirements.check:main"
oops-req-update = "oops.commands.requirements.update:main"
oops-sub-add = "oops.commands.submodules.add:main"
oops-sub-branch = "oops.commands.submodules.branch:main"
oops-sub-check = "oops.commands.submodules.check:main"
oops-sub-clean = "oops.commands.submodules.clean:main"
oops-sub-fix = "oops.commands.submodules.fix:main"
oops-sub-init = "oops.commands.submodules.init:main"
oops-sub-prune = "oops.commands.submodules.prune:main"
oops-sub-remove = "oops.commands.submodules.remove:main"
oops-sub-rename = "oops.commands.submodules.rename:main"
oops-sub-replace = "oops.commands.submodules.replace:main"
oops-sub-rewrite = "oops.commands.submodules.rewrite:main"
oops-sub-show = "oops.commands.submodules.show:main"
oops-sub-update = "oops.commands.submodules.update:main"

[tool.hatch.build.targets.wheel]
packages = ["src/oops"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
source = "vcs"

[tool.ruff]
line-length = 100
target-version = "py37"
lint.select = ["E", "F", "I", "B", "UP", "SIM", "PL", "C90"]
lint.ignore = [
    "E203", # whitespace before ':' (plays better with Black if you add it later)
]
exclude = ["tests/fixtures"]

[tool.pyright]
typeCheckingMode = "basic"
pythonVersion = "3.7"
reportMissingTypeStubs = false

[tool.pytest.ini_options]
addopts = "-q --strict-markers"
testpaths = ["tests"]

[tool.coverage.run]
source = ["oops"]
branch = true
parallel = true
omit = ["*/__main__.py", "*/_version.py", "*/tests/*", "*/oops/commands/*"]

[tool.coverage.report]
skip_empty = true
show_missing = true
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.coverage.paths]
source = ["src/oops", ".venv/lib/python*/site-packages/oops"]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "coverage[toml]", "ruff", "pyright", "freezegun"]
docs = [
    "mkdocs>=1.6; python_version>='3.9'",
    "mkdocs-material>=9.7; python_version>='3.9'",
    "mkdocs-click>=0.9; python_version>='3.9'",
    "mkdocs-glightbox>=0.5; python_version>='3.9'",
    "mkdocs-redirects>=1.2; python_version>='3.9'",
    "mkdocs-git-revision-date-localized-plugin>=1.5; python_version>='3.9'",
    "mkdocstrings[python]",
    "mike>=2.1; python_version>='3.9'",
]

[tool.uv]
package = true
