[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "oops"
description = "Our Odoo Project Sidekick"
readme = "README.md"
license = "AGPL-3.0-only"
authors = [{ name = "Apik" }]
keywords = ["odoo", "git", "submodules", "manifests", "cli"]
dynamic = ["version"]
dependencies = [
    "PyYAML",
    "requests",
    "typing-extensions; python_version<'3.11'",
    "importlib-metadata; python_version<'3.10'",
    "tomli; python_version<'3.11'",                 # from 3.11 tomllib is in stdlib
    "backports.zoneinfo; python_version<'3.9'",
    "click>=8.1",
    "typing-extensions>=4.7; python_version<'3.8'",
    "libcst==0.4.*; python_version<'3.8'",
    "libcst; python_version>='3.8'",
    "rich>=13.0",
    "fixit>2.0; python_version>='3.9'",
    "tabulate",
    "GitPython",
]


requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
]

[project.urls]
homepage = "https://github.com/apikcloud/oops"
repository = "https://github.com/apikcloud/oops"

[project.scripts]
# Root command
oops = "oops.cli:main"
# Sub-commands
oops-check-manifest = "oops.commands.manifest.check:main"
oops-check-submodules = "oops.commands.submodules.check:main"
oops-check-project = "oops.commands.project.check:main"
oops-check-requirements = "oops.commands.requirements.check:main"
oops-update-readme = "oops.commands.readme.update:main"
oops-exclude-addons = "oops.commands.project.exclude:main"
oops-fix-manifest = "oops.commands.manifest.fix:main"
# Special command ;)
oops-i-did-it-again = "oops.commands.submodules.clean:main"


[tool.hatch.build.targets.wheel]
packages = ["src/oops"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
source = "vcs"

[tool.ruff]
line-length = 100
target-version = "py37"
lint.select = ["E", "F", "I", "B", "UP", "SIM", "PL", "C90"]
lint.ignore = [
    "E203", # whitespace before ':' (plays better with Black if you add it later)
]
exclude = ["tests/fixtures"]

[tool.pyright]
typeCheckingMode = "basic"
pythonVersion = "3.7"
reportMissingTypeStubs = false

[tool.pytest.ini_options]
addopts = "-q --strict-markers"
testpaths = ["tests"]

[tool.coverage.run]
source = ["oops"]
branch = true
parallel = true
omit = ["*/__main__.py", "*/_version.py", "*/tests/*", "*/oops/commands/*"]

[tool.coverage.report]
skip_empty = true
show_missing = true
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.coverage.paths]
source = ["src/oops", ".venv/lib/python*/site-packages/oops"]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "coverage[toml]", "ruff", "pyright", "freezegun"]
docs = [
    "mkdocs>=1.6; python_version>='3.9'",
    "mkdocs-material>=9.7; python_version>='3.9'",
    "mkdocs-click>=0.9; python_version>='3.9'",
    "mkdocs-glightbox>=0.5; python_version>='3.9'",
    "mkdocs-redirects>=1.2; python_version>='3.9'",
    "mkdocs-git-revision-date-localized-plugin>=1.5; python_version>='3.9'",
    "mkdocstrings[python]",
    "mike>=2.1; python_version>='3.9'",
]

[tool.uv]
package = true
